# github-actions

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DELEGATION_GUIDE.md  EXECUTE_DELEGATION.md  LICENSE  MIGRATION_README.md  MIGRATION_TASK_TEMPLATE.md  QUICK_START.md  README.md  WORKFLOW_MIGRATION_PLAN_v4.md  batch-merge.sh  batch-migrate.sh  batch-run-wf-libs.sh  batch-run-wf.sh  delegate-migration-task.sh  easy-merge.sh  easy-migrate.sh  easy-run-wf-lib.sh  easy-run-wf.sh  failed-merges.txt  failed-reruns-libs.txt  filter-archived.sh  renovate.json  runs.json  successful-merges.txt  successful-migrations.txt  successful-reruns-libs.txt  successful-reruns.txt
.github/: copilot-instructions.md
.github/prompts/: action-unit-testing.prompt.md  rewrite-action.prompt.md
.github/workflows/: README.md  ci-cd-build-deploy-maven-lib.yml  ci-cd-default.yml  codeql-config.yml   codeql.yml  maven-artifacts-pruner.yml  maven-versions-bumper.yml  update-deps-and-create-pr.yml
ci-cd/: README.md  deno.json  package.json
ci-cd/build-docker-image/: action.yml
ci-cd/build-maven-project/: action.yml  helpers.sh  helpers_additional.sh
ci-cd/comment-on-pr/: action.yml
ci-cd/testdata/python-app/: pyproject.toml
clean-directory/: action.yml
directory-recreate/: action.yml  action_backtion.yml  package-lock.json  package.json  tsconfig.json
get-github-app-installation-token/: action.yml  deno.json  package.json
get-repo-lists/: action.yml  helpers_additional.sh  query_repos.graphql
run-maven-command/: action.yml  helpers.sh  helpers_additional.sh
workflows/: README.md
(+160 files in other folders)
