[project]
name = 'python-app'
description = 'Python test application'
requires-python = '==3.14.5'
dependencies = [
  'fastapi==0.136.3',
]

[project.optional-dependencies]
dev = [
  'ruff==0.6.9',
]

[dependency-groups]
lint = [
  'ruff==0.15.15',
]
test = [
  { include-group = 'lint' },
  'pytest==9.0.3',
]
