[project]
name = 'python-app'
description = 'Python test application'
requires-python = '==3.14.6'
dependencies = [
  'fastapi==0.139.0',
]

[project.optional-dependencies]
dev = [
  'ruff==0.6.9',
]

[dependency-groups]
lint = [
  'ruff==0.15.20',
]
test = [
  { include-group = 'lint' },
  'pytest==9.1.1',
]
